[gd_scene load_steps=6 format=2]

[ext_resource path="res://grid/GridFreePlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[node name="GridFreePlay" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" type="Node2D" parent="."]

[node name="Toolbar" type="MarginContainer" parent="."]
margin_right = 354.0
margin_bottom = 434.0
rect_min_size = Vector2( 474, 434 )
theme = SubResource( 2 )
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar"]
margin_left = 30.0
margin_right = 444.0
margin_bottom = 434.0
custom_constants/separation = 50

[node name="VBoxContainer4" type="VBoxContainer" parent="Toolbar/VBoxContainer"]
margin_right = 414.0
margin_bottom = 100.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer4"]
margin_right = 414.0
margin_bottom = 24.0
text = "Streak"

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer4"]
margin_top = 42.0
margin_right = 414.0
margin_bottom = 100.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer"]
margin_right = 168.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 24.0
text = "Time:"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 168.0
margin_bottom = 58.0
text = "Clicks:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 198.0
margin_right = 390.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer/VBoxContainer2"]
margin_right = 192.0
margin_bottom = 24.0
text = "00:00:00"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer4/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 58.0
text = "0"

[node name="VBoxContainer5" type="VBoxContainer" parent="Toolbar/VBoxContainer"]
margin_top = 150.0
margin_right = 414.0
margin_bottom = 284.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5"]
margin_right = 414.0
margin_bottom = 24.0
text = "Session"

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer5"]
margin_top = 42.0
margin_right = 414.0
margin_bottom = 134.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer"]
margin_right = 168.0
margin_bottom = 92.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 24.0
text = "Time:"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 168.0
margin_bottom = 58.0
text = "Clicks:"

[node name="Label3" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 168.0
margin_bottom = 92.0
text = "Misses:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer"]
margin_left = 198.0
margin_right = 390.0
margin_bottom = 92.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer2"]
margin_right = 192.0
margin_bottom = 24.0
text = "00:00:00"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 58.0
text = "0"

[node name="Label3" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer5/HBoxContainer/VBoxContainer2"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 92.0
text = "0"

[node name="VBoxContainer6" type="VBoxContainer" parent="Toolbar/VBoxContainer"]
margin_top = 334.0
margin_right = 414.0
margin_bottom = 434.0
size_flags_vertical = 10
custom_constants/separation = 18

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6"]
margin_right = 414.0
margin_bottom = 24.0
text = "Record"

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6"]
margin_top = 42.0
margin_right = 414.0
margin_bottom = 100.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer"]
margin_right = 168.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 24.0
text = "Time:"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 168.0
margin_bottom = 58.0
text = "Clicks:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer"]
margin_left = 198.0
margin_right = 390.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer2"]
margin_right = 192.0
margin_bottom = 24.0
text = "00:00:00"

[node name="Label2" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 58.0
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
